--- a/FrontEnd/remember/index.html
+++ b/FrontEnd/remember/index.html
@@ -27,6 +27,14 @@
                 <div class="w-3 h-3 bg-yellow-500 rounded-full"></div>
                 <div class="w-3 h-3 bg-green-500 rounded-full"></div>
                 <h1 class="text-2xl font-bold text-white ml-4">i-remember</h1>
+                <button 
+                    id="lockBtn" 
+                    onclick="showStoredKey()" 
+                    class="ml-auto text-gray-400 hover:text-yellow-400 transition-colors duration-200 text-xl cursor-pointer"
+                    title="Show stored key"
+                >
+                    🔒
+                </button>
             </div>
             <p class="text-gray-400 text-sm ml-12">API Testing Terminal</p>
         </div>
@@ -143,9 +151,95 @@
         </div>
     </div>
 
+    <!-- Key Display Modal -->
+    <div id="keyModal" class="fixed inset-0 bg-black bg-opacity-50 hidden flex items-center justify-center z-50">
+        <div class="bg-gray-800 rounded-lg border border-gray-700 p-6 max-w-md w-full mx-4 shadow-xl">
+            <div class="flex justify-between items-center mb-4">
+                <h3 class="text-lg font-semibold text-white flex items-center gap-2">
+                    <span class="text-yellow-400">🔐</span> Stored Authorization Key
+                </h3>
+                <button onclick="closeKeyModal()" class="text-gray-400 hover:text-white text-xl">×</button>
+            </div>
+            <div class="bg-gray-900 border border-gray-600 rounded-md px-3 py-2 text-yellow-400 font-mono text-xs break-all mb-4">
+                <span id="storedKeyDisplay">No key stored</span>
+            </div>
+            <div class="flex gap-2">
+                <button 
+                    onclick="copyStoredKey()" 
+                    class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-md font-medium transition-colors duration-200 flex-1"
+                >
+                    Copy Key
+                </button>
+                <button 
+                    onclick="clearStoredKey()" 
+                    class="bg-red-600 hover:bg-red-700 text-white px-4 py-2 rounded-md font-medium transition-colors duration-200 flex-1"
+                >
+                    Clear Key
+                </button>
+            </div>
+        </div>
+    </div>
+
     <script>
         const BASE_URL = "/api";
         let currentKey = null;
+
+        // Load stored key on page load
+        function loadStoredKey() {
+            const stored = localStorage.getItem('i-remember-key');
+            if (stored) {
+                currentKey = stored;
+                updateButtons();
+            }
+        }
+
+        // Save key to localStorage
+        function saveKey(key) {
+            localStorage.setItem('i-remember-key', key);
+        }
+
+        // Modal functions
+        function showStoredKey() {
+            const stored = localStorage.getItem('i-remember-key');
+            const display = document.getElementById('storedKeyDisplay');
+            if (stored) {
+                display.textContent = stored;
+            } else {
+                display.textContent = 'No key stored';
+            }
+            document.getElementById('keyModal').classList.remove('hidden');
+        }
+
+        function closeKeyModal() {
+            document.getElementById('keyModal').classList.add('hidden');
+        }
+
+        function copyStoredKey() {
+            const stored = localStorage.getItem('i-remember-key');
+            if (stored) {
+                navigator.clipboard.writeText(stored).then(() => {
+                    addToOutput('Key copied to clipboard', 'success');
+                    closeKeyModal();
+                }).catch(() => {
+                    addToOutput('Failed to copy key to clipboard', 'error');
+                });
+            }
+        }
+
+        function clearStoredKey() {
+            localStorage.removeItem('i-remember-key');
+            currentKey = null;
+            updateButtons();
+            addToOutput('Stored key cleared', 'success');
+            closeKeyModal();
+        }
+
+        // Close modal when clicking outside
+        document.getElementById('keyModal').addEventListener('click', function(e) {
+            if (e.target === this) {
+                closeKeyModal();
+            }
+        });
 
         function addToOutput(text, type = 'info') {
             const output = document.getElementById('output');
@@ -254,6 +348,7 @@
 
             if (result && result.response.ok) {
                 currentKey = result.data.detail;
+                saveKey(currentKey); // Save to localStorage
                 updateButtons();
                 addToOutput(`Authorization key generated and stored`, 'success');
             }
@@ -304,6 +399,7 @@
             
             if (result && result.response.ok) {
                 currentKey = null;
+                localStorage.removeItem('i-remember-key'); // Clear from localStorage
                 updateButtons();
                 addToOutput('Data deleted and key cleared', 'success');
             }
@@ -322,6 +418,7 @@
         }
 
         // Initialize
+        loadStoredKey(); // Load any stored key first
         updateButtons();
         
         // Set default data
