--- a/FrontEnd/remember/index.html
+++ b/FrontEnd/remember/index.html
@@ -49,7 +49,7 @@
                         </button>
                     </div>
                     <div>
-                        <label class="block text-sm font-medium text-cyan-400 mb-2">Valid Duration (minutes)</label>
+                        <label class="block text-sm font-medium text-cyan-400 mb-2">Valid Duration (1-10080 minutes)</label>
                         <input type="number" id="validInput" value="1" min="1" max="10080" class="w-full bg-gray-900 border border-gray-600 rounded-md px-3 py-2 text-green-400 font-mono text-sm focus:outline-none focus:ring-2 focus:ring-blue-500" oninput="validateDuration(this)">
                         <div id="durationWarning" class="mt-1 text-red-400 text-xs hidden">Duration must be between 1 minute and 10080 minutes (1 week)</div>
                         <div id="keyDisplay" class="mt-4 hidden">
