--- a/FrontEnd/remember/index.html
+++ b/FrontEnd/remember/index.html
@@ -613,7 +613,7 @@
                 saveStoredKeys();
                 updateButtons();
                 updateKeySelectionDisplay();
-                addToOutput('Authorization key updated due to duration change. Please use the new key for future requests.', 'success');
+                addToOutput('Authorization key updated due to duration change. Use the new key for future requests.', 'success');
             }
         }
 
