--- a/FrontEnd/remember/index.html
+++ b/FrontEnd/remember/index.html
@@ -11,9 +11,9 @@
     <meta name="mobile-web-app-capable" content="yes">
     <title>i-remember - API Terminal</title>
     <link rel="manifest" href="./manifest.json">
-    <link rel="icon" type="image/png" href="./favicon.png">
-    <link rel="shortcut icon" type="image/png" href="./favicon.png">
-    <link rel="apple-touch-icon" href="./favicon.png">
+    <link rel="icon" type="image/png" href="./icons/favicon.png">
+    <link rel="shortcut icon" type="image/png" href="./icons/favicon.png">
+    <link rel="apple-touch-icon" href="./icons/favicon.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
