--- a/FrontEnd/remember/index.html
+++ b/FrontEnd/remember/index.html
@@ -26,10 +26,14 @@
         }
     </script>
     <style>
-        body { height: 100dvh; overflow: hidden; }
+        body { 
+            min-height: 100dvh; 
+            overflow-x: hidden; 
+            overflow-y: auto; 
+        }
         .app-container { 
-            padding: env(safe-area-inset-top) env(safe-area-inset-right) 0 env(safe-area-inset-left);
-            padding-bottom: 0;
+            padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
+            min-height: 100dvh;
         }
         
         /* PWA specific styles */
@@ -59,8 +63,8 @@
     </style>
 </head>
 <body class="dark bg-gray-900 font-mono text-sm">
-    <div class="app-container h-full flex flex-col">
-        <div class="flex-1 flex flex-col p-4 max-w-6xl mx-auto w-full min-h-0 pb-0">
+    <div class="app-container flex flex-col">
+        <div class="flex-1 flex flex-col p-4 max-w-6xl mx-auto w-full">
             <!-- Header -->
             <div class="mb-4">
                 <div class="flex items-center gap-2 mb-1">
@@ -125,7 +129,7 @@
             </div>
 
             <!-- Terminal Output -->
-            <div class="bg-gray-800 rounded-lg border border-gray-700 p-4 shadow-xl flex-1 flex flex-col min-h-0">
+            <div class="bg-gray-800 rounded-lg border border-gray-700 p-4 shadow-xl flex flex-col">
                 <div class="flex justify-between items-center mb-4 flex-shrink-0">
                     <h2 class="text-lg font-semibold text-white flex items-center gap-2">
                         <span class="text-green-400">💻</span> Terminal Output
@@ -134,7 +138,7 @@
                         <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 8V4m0 0h4M4 4l5 5m11-1V4m0 0h-4m4 0l-5 5M4 16v4m0 0h4m-4 0l5-5m11 5l-5-5m5 5v-4m0 4h-4"></path></svg>
                     </button>
                 </div>
-                <div id="output" class="bg-black rounded-md p-3 flex-1 overflow-y-auto border border-gray-600 font-mono text-sm min-h-0">
+                <div id="output" class="bg-black rounded-md p-3 overflow-y-auto border border-gray-600 font-mono text-sm" style="min-height: 200px; max-height: 400px;">
                     <div class="text-green-400 mb-2">
                         <span class="text-blue-400">[i-remember]</span> 
                         <span class="text-cyan-400">user@terminal</span>
